--- a/nft-card/style.css
+++ b/nft-card/style.css
@@ -19,7 +19,7 @@
     #quadro{
         background-color: hsl(216, 50%, 16%);
         width:300px;
-        border-radius: 15px;
+        border-radius: 12px;
         box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.342);
 
         position: absolute;
@@ -29,10 +29,19 @@
     }
 
     .cubo{
-        width: 250px;
+        background-image: url(images/image-equilibrium.jpg);
+        width: 255px;
+        height: 255px;
+        background-size: contain;
         margin-top: 20px;
-        border-radius: 15px;
+        margin-left: 22px;
+        border-radius: 12px;
     }
+
+    .cubo:hover{
+        background-image: url(images/icon-view.svg);
+    }
+
 
     h1{
         text-align: left;
