--- a/column-card/style.css
+++ b/column-card/style.css
@@ -71,7 +71,7 @@ h1{
 p{
     font-family: var(--fonte-1);
     color: var(--transparent-white);
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 30px;
     font-size: 15px;
 }
@@ -79,54 +79,29 @@ p{
 .botao{
     background-color: white;
     width: 130px;
-    padding: 10px;
-    
+    padding: 12px;
+    border: none;
     border-radius: 20px;
     text-align: center;
-}
-
-.botao > a{
-    text-decoration: none;
-}
-
-.card-1 > .botao > a {
-    color: var(--orange);
-}
-
-.card-1 > .botao > a:hover{
-    color: white;
-}
-
-.card-1 > .botao:hover{
-    background-color: var(--orange);
-    border: 2px solid white;
+    font-weight: bold;
     
 }
 
-.card-2 > .botao > a {
+.card-1 .botao{
+    color: var(--orange);
+}
+.card-2 .botao{
     color: var(--dark-cyan);
 }
-
-.card-2 > .botao > a:hover{
-    color: white;
-}
-
-.card-2 > .botao:hover{
-    background-color: var(--dark-cyan);
-    border: 2px solid white;
-}
-
-.card-3 > .botao > a {
+.card-3 .botao{
     color: var(--very-dark-cyan);
 }
 
-.card-3 > .botao > a:hover{
+.botao:hover{
+    background-color: transparent;
     color: white;
-}
-
-.card-3 > .botao:hover{
-    background-color: var(--very-dark-cyan);
     border: 2px solid white;
+    cursor: pointer;
 }
 
 footer{
