--- a/column-card/style.css
+++ b/column-card/style.css
@@ -32,13 +32,14 @@ body,html{
 
 .cards{
     width: 300px;
+    height: 95%;
     display: flex;
     flex-direction: column;
 
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -35%);
+    transform: translate(-50%, -50%);
 }
 
 .card-1{
