--- a/column-card/media-query.css
+++ b/column-card/media-query.css
@@ -5,7 +5,9 @@
     flex-direction: row;
     width: 800px;
    
-    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-35%);
    
 }
 
