--- a/column-card/media-query.css
+++ b/column-card/media-query.css
@@ -1,14 +1,17 @@
 @charset "UTF-8";
 
+body,main,html{
+    height: 100vh;
+    width: 100vw;
+
+    position: relative;
+}
+
 .cards{
     display: flex;
     flex-direction: row;
     width: 800px;
-   
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-35%);
-   
+    align-items: center;
 }
 
 .card-1,.card-2,.card-3{
