--- a/column-card/style.css
+++ b/column-card/style.css
@@ -23,8 +23,8 @@
 }
 
 body,main,html{
-    width: 97vw;
-    height: 100vh;
+    width: 90vw;
+    height: 150vh;
     background-color: var(--very-light-gray);
     position: relative;
 }
@@ -35,6 +35,7 @@ body,main,html{
     height: 95%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     position: absolute;
     top: 50%;
@@ -105,11 +106,16 @@ p{
     cursor: pointer;
 }
 
-footer{
-   position: absolute;
-   right: 0;
-   left: 0;
-   bottom: 0;
-   padding: 1rem;
-   text-align: center;
+footer > p {
+    color: gray;
+    text-align: center;
+    font-size: 10px;
+}
+
+footer a {
+    color: var(--very-dark-cyan);
+}
+
+footer a:hover{
+    color: var(--orange);
 }
