--- a/interactive-rating/style.css
+++ b/interactive-rating/style.css
@@ -34,6 +34,7 @@ body,html,main{
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
+    display: block;
 }
 
 .star{
@@ -61,23 +62,26 @@ fieldset{
     display: flex;
     border: none;
     justify-content: space-around;
+
 }
 
-.rating-button{
+input{
+    display: none;
+}
+
+label{
     background-color: hsl(213, 19%, 21%);
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    border: none;
-    width: 45px;
-    height: 45px;
-    color: var(--mediumGray);
-    padding-left: 16px;
+    text-align: center;
     padding-top: 16px;
+    color: var(--lightGray);
 }
 
-.rating-button:hover{
+label:hover{
     background-color: var(--orange);
-    color:white;
-    cursor: pointer;
+    color: white;
 }
 
 .submit{
