--- a/article-preview-component/style.css
+++ b/article-preview-component/style.css
@@ -9,3 +9,166 @@
     --lightGrayishBlue: hsl(210, 46%, 95%);
     --font-family: 'Manrope', sans-serif;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body,html,main{
+    height: 95vh;
+    width: 98vw;
+    font-family: var(--font-family);
+    background-color: var(--lightGrayishBlue);
+    position: relative;
+}
+
+.conteiner{
+    width: 350px;
+    height: 550px;
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.075);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+}
+
+.imagem{
+    background-image: url(images/drawers.jpg);
+    background-position: center top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 350px;
+    height: 230px;
+    border-radius: 15px 15px 0 0;
+}
+
+h1{
+    font-size: 1.1em;
+    padding: 30px;
+    color: var(--veryDarkGrayishBlue);
+    font-weight: 700;
+}
+
+.conteiner > p{
+    padding: 0px 30px 30px 30px;
+    color: var(--desaturatedDarBlue);
+    word-spacing: 2px;
+    font-size: 14px;
+    text-align: left;
+}
+
+/*Nome e botões conteiner 1*/
+
+.nome{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 45px;
+    
+}
+
+.michele-foto{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.michele-nome{
+    display: flex;
+    flex-direction: column;
+    padding-left: 15px;
+}
+
+.p1{
+    font-size: 14px;
+    width: 125px;
+    font-weight: 700;
+    margin-top: 10px;
+    color: var(--veryDarkGrayishBlue);
+}
+
+.p2{
+    font-size: 12px;
+    color: var(--grayishBlue);
+}
+
+.share{
+    background-image: url(images/icon-share.svg);
+    background-color:var(--lightGrayishBlue);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    width: 35px;
+    height: 35px;
+    border: 8px solid var(--lightGrayishBlue);
+    border-radius: 50%;
+    margin-top: 15px;
+    margin-left: 70px;
+
+    cursor: pointer;
+
+}
+
+/* icones conteiner 2*/
+
+.icons{
+    width: 350px;
+    height: 64px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: var(--veryDarkGrayishBlue);
+    border-radius: 0 0 15px 15px;
+    padding-top: 20px;
+    padding-left: 15px;
+    display: none;
+}
+
+.icons > p{
+    text-transform: uppercase;
+    color: var(--grayishBlue);
+    letter-spacing: 5px;
+    font-weight: 500;
+}
+
+.icon{
+    width: 25px;
+    height: 25px;
+}
+
+.share2{
+    width: 35px;
+    height: 35px;
+    border: 8px solid var(--lightGrayishBlue);
+    border-radius: 50%;
+    
+
+}
+
+
+/*rodapé*/
+
+.attribution { 
+    font-size: 11px; text-align: center; 
+}
+
+.attribution a{
+    color: var(--veryDarkGrayishBlue);
+}
+.attribution a:hover{
+    color: var(--desaturatedDarBlue);
+}
