--- a/article-preview-component/style.css
+++ b/article-preview-component/style.css
@@ -16,6 +16,8 @@
     box-sizing: border-box;
 }
 
+/* MOBILE */
+
 body,html,main{
     height: 95vh;
     width: 98vw;
@@ -179,4 +181,27 @@ h1{
 }
 .attribution a:hover{
     color: var(--desaturatedDarBlue);
+}
+
+@media screen and (min-width: 700px) {
+    .conteiner{
+        display: block;
+        width: 750px;
+        height: 300px;
+    }
+    .imagem{
+        float: left;
+        height: 300px;
+        width: 300px;
+        border-radius: 15px 0 0 15px;
+        background-position: top left;
+    }
+
+    h1{
+        padding: 30px;
+        margin-left: 30px;
+    }
+    .nome{
+       justify-content: center;
+    }
 }
